# nova-retail-end-to-end-data-platform

./: .gitignore  README.md  cloudbuild-test.yaml  cloudbuild.yaml  pyproject.toml
Infrastructure_Terraform/: artifact_registry.tf  bigquery.tf  bigquery_external_tables.tf  composer.tf  datastream.tf  iam.tf  outputs.tf  providers.tf  pubsub.tf  storage.tf  variables.tf
Pipelines/dataflow/: Dockerfile  local_test.py  main.py  metadata.json  parquet_sink.py  parsing.py  pipeline_options.py  requirements.txt  schema.py  validation.py
dags/: nova_retail_batch_dag.py
data_sources/: Dockerfile.batch  Dockerfile.clickstream  Dockerfile.seed  build_and_push_batch.sh  clickstream_producer.py  cloudbuild_batch.yaml  currency_rates_fetcher.py  order_genrator.py  requirements.txt  seed_data.py  supplier_catalog_generator.py
dbt_nova_retail/: Dockerfile  build_and_push.sh  dbt_project.yml  packages.yml  profiles.yml
dbt_nova_retail/models/marts/: dim_currency_rates.sql  dim_customers.sql  dim_date.sql  dim_products.sql  fact_clickstream_events.sql  fact_order_items.sql  fact_orders.sql  fact_payments.sql  schema.yml
dbt_nova_retail/models/staging/: schema.yml  sources.yml  stg_clickstream_events.sql  stg_currency_rates.sql  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_products.sql  stg_supplier_catalog.sql
dbt_nova_retail/tests/: assert_order_totals_are_positive.sql
scripts/: bootstrap.sh  build_template.sh  run_pipeline.sh  run_terraform.sh
