[project]
name = "nova-retail-end-to-end-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-beam[gcp]==2.57.0",
    "dbt-bigquery>=1.9.2",
    "faker==24.4.0",
    "google-cloud-bigquery>=3.42.2",
    "google-cloud-pubsub==2.21.1",
    "google-cloud-storage==2.16.0",
    "psycopg2-binary==2.9.9",
    "pyarrow==15.0.2",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
]
